<resources>
    <string name="app_name">Gotcha!</string>
    <string name="please_rotate_your_device_one_time_and_clockwise">Please rotate your device one time and clockwise. Once succeeded check the box.</string>
    <string name="title_activity_main2">MainActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">OCR CAPTCHA</string>
    <string name="second_fragment_label">Proximity CAPTCHA</string>
    <string name="third_fragment_label">Rotation CAPTCHA</string>
    <string name="fourth_fragment_label">Demographics</string>

    <!-- Button texts -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="to_start">To Start</string>
    <string name="submit">SUBMIT</string>

    <!-- Introduction texts -->
    <string name="button">Continue</string>
    <string name="first_instructions">Hi! We are the IaMHUM@n team. We are doing an experiment about mobile CAPTCHAs. Therefore we explore 3 different options.</string>
    <string name="consent">By clicking \'continue\' below you indicate that you understand and consent to the following:
        \n
        \n&#8226; This application was built for research purposes. It is not meant to be used outside of the study.
        \n&#8226; No personal data is collected. The data collection is limited to data relevant to our study, so performance related data is collected.
        \n&#8226; All collected data is stored to a unique anonymized identifier.
        \n&#8226; All data will be deleted half a year after it is collected, or the study ends, whichever is sooner.
        \n
        \nThe experiment takes about 15 minutes.
        \n
        \nFor more information contact: a.dimitriou1@students.uu.nl</string>

    <!-- Form texts -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_title">Registration Form </string>
    <string name="email">Email</string>
    <string name="terms_conditions">I consent that my information is not stored.</string>

    <!-- CAPTCHA validation texts -->
    <string name="proximity_validation">Proximity CAPTCHA validation successful</string>
    <string name="rotation_validation">Rotation CAPTCHA validation successful</string>
    <string name="ocr_validation">OCR CAPTCHA validation successful</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_third_fragment">Hello third fragment</string>

    <!-- OCR CAPTCHA texts -->
    <string name="fourth_fragment_task_title">OCR CAPTCHA Task</string>
    <string name="hint">Enter the letters above</string>
    <string name="captchatext">CAPTCHA Text</string>
    <string name="imageDisc">This is the text you have to fill in.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thankyou">Thank you for participating in our study!</string>
    <string name="close_app">You can close the app now.</string>

    <!-- Instructions texts -->
    <string name="instructions_first_fragment_label">OCR CAPTCHA</string>
    <string name="instructions_second_fragment_label">Proximity CAPTCHA</string>
    <string name="instructions_third_fragment_label">Rotation CAPTCHA</string>
    <string name="instruction1_text">CAPTCHAs were invented to block spammy software from posting comments on pages or purchasing excess items at once.</string>
    <string name="instruction1_text2">The first task is the most common form of CAPTCHA, an image with several distorted letters. For this task, you will have to fill in the letters shown in the picture into the respective field.</string>
    <string name="instruction2_text">The next type of CAPTCHA is an innovative way to block spammy software.</string>
    <string name="instruction2_text_more">In order to successfully complete this CAPTCHA you have to approach your palm close to the phone until the <font color='red'>RED</font> square turns to <font color='green'>GREEN</font>.</string>
    <string name="instruction3_text">In order to successfully complete this CAPTCHA you have to rotate your phone clockwise for 180 degrees. Be aware to switch off the auto rotate mode of your phone!</string>
    <string name="instruction_general">The input in the following form (name, surname, e-mail) will not be stored and only works as a dummy for the scenario. This means that it does not matter what you put into the input fields.</string>
    <string name="instruction_general_3">The input in the following form (name, surname, e-mail) will not be stored and only works as a dummy for the scenario. This means that it does not matter what you put into the input fields. However, <b>please use the same input as in the previous task.</b></string>
    <string name="instruction_general2">After the CAPTCHA task, you will have to answer a questionnaire about the usability of the CAPTCHA. Please give honest feedback.</string>

    <!-- SUS texts -->
    <string name="sus_first_fragment_label">SUS OCR CAPTCHA</string>
    <string name="sus_second_fragment_label">SUS Proximity CAPTCHA</string>
    <string name="sus_third_fragment_label">SUS Rotation CAPTCHA</string>
    <string name="sus_instructions">Please score the following 10 items with one of five responses that range from 1 (= Strongly Disagree) to 5 (= Strongly Agree) for the captcha you just completed.</string>
    <string name="sus">SUS questions here!</string>
    <string name="sus_q1">Question 1: I think that I would like to use this system frequently.</string>
    <string name="sus_q2">Question 2: I found the system unnecessarily complex.</string>
    <string name="sus_q3">Question 3: I thought the system was easy to use.</string>
    <string name="sus_q4">Question 4: I think that I would need the support of a technical person to be able to use this system.</string>
    <string name="sus_q5">Question 5: I found the various functions in this system were well integrated.</string>
    <string name="sus_q6">Question 6: I thought there was too much inconsistency in this system.</string>
    <string name="sus_q7">Question 7: I would imagine that most people would learn to use this system very quickly.</string>
    <string name="sus_q8">Question 8: I found the system very cumbersome to use.</string>
    <string name="sus_q9">Question 9: I felt very confident using the system.</string>
    <string name="sus_q10">Question 10: I needed to learn a lot of things before I could get going with this system.</string>

    <!-- Demographic texts -->
    <string name="gender">What is your gender?</string>
    <string name="age">What is your age?</string>
    <string name="age_hint">Type in your age</string>
    <string name="demographics">Demographics</string>
    <string name="first_text">Finally, we would like to have some demographic information from you.</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="other">other</string>
    <string name="handedness">What is your handedness / preferred hand?</string>
    <string name="right">right</string>
    <string name="left">left</string>
    <string name="both">both</string>
    <string name="comment">Any other comment?</string>

</resources>